--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
 
 <script>
 const firebaseConfig = {
-   apiKey: "YOUR",
-   authDomain: "YOUR",
-   databaseURL: "YOUR",
-   projectId: "YOUR",
-   storageBucket: "YOUR",
-   messagingSenderId: "YOUR",
-   appId: "YOUR"
+    apiKey: "AIzaSyD66aIVOTVco6rTtpVinkl64UZGnZDgn1o",
+  authDomain: "firezone-elite.firebaseapp.com",
+  projectId: "firezone-elite",
+  storageBucket: "firezone-elite.firebasestorage.app",
+  messagingSenderId: "121224317328",
+  appId: "1:121224317328:web:a4d19bab51fc8076400b15"
+   databaseURL: "https://firezone-elite-default-rtdb.firebaseio.com/",
+   
 };
 
 firebase.initializeApp(firebaseConfig);
@@ -83,3 +84,4 @@ function login(){
 
 </body>
 </html>
+
