--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         font-family: Arial;
     }
     .box {
-        width: 320px;
+        width: 350px;
         background: rgba(0,0,0,0.7);
         padding: 25px;
         border-radius: 10px;
@@ -29,7 +29,7 @@
         border: none;
         border-radius: 5px;
     }
-    button {
+    .btn {
         width: 95%;
         padding: 12px;
         border: none;
@@ -42,9 +42,15 @@
     }
     .google-btn {
         margin-top: 15px;
+        padding: 12px;
+        width: 95%;
         background: white;
-        color: black;
-        font-weight: 600;
+        color: #000;
+        border: none;
+        border-radius: 5px;
+        font-size: 15px;
+        font-weight: bold;
+        cursor: pointer;
     }
 </style>
 
@@ -60,7 +66,7 @@
 
     <input id="email" type="email" placeholder="Email">
     <input id="password" type="password" placeholder="Password">
-    <button onclick="emailLogin()">Login</button>
+    <button class="btn" onclick="emailLogin()">Login</button>
 
     <button class="google-btn" onclick="googleLogin()">Sign in with Google</button>
 </div>
