--- a/admin.html
+++ b/admin.html
@@ -1,34 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Admin Dashboard</title>
-  <link rel="stylesheet" href="style.css">
+    <title>Admin Panel</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg">
+<body style="background:#ddd;">
 
-  <h1 class="white">Admin Panel</h1>
+<h1>Admin Panel</h1>
+<p>Only accessible manually by URL.</p>
 
-  <button id="logoutBtn" class="logout">Logout</button>
-
-  <script type="module">
-    import { auth, getUserRole } from "./firebase.js";
-    import { onAuthStateChanged, signOut } 
-    from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-
-    onAuthStateChanged(auth, async (user) => {
-      if (!user) return window.location.href = "login.html";
-
-      const role = await getUserRole(user.uid);
-
-      if (role !== "admin") {
-        return window.location.href = "login.html";
-      }
-    });
-
-    document.getElementById("logoutBtn").onclick = () => {
-      signOut(auth);
-    };
-  </script>
+<a href="public.html">Back to Dashboard</a>
 
 </body>
 </html>
